# flask-employee-api

./: .gitignore  README.md  model.pkl  pyproject.toml
app/: __init__.py  config.py  constants.py
app/commands/: __init__.py  employees.py
app/config/: __init__.py  core.py  default.py  smorest_config.py
app/extensions/: __init__.py
app/extensions/api/: __init__.py
app/extensions/database/: __init__.py
app/extensions/logger/: __init__.py
app/logger/: __init__.py
app/models/: __init__.py  employees.py  members.py  teams.py
app/tests/: test_employees.py
app/utils/: pagination.py
app/views/: __init__.py
app/views/employees/: __init__.py  resources.py  schemas.py
app/views/members/: __init__.py  resources.py  schemas.py
app/views/teams/: __init__.py  resources.py  schemas.py
