[tool.poetry]
name = "flask-employee-api"
version = "0.1.0"
description = "A Flask API that serves data from a database containing information about employees of a fictional company. The API allows for basic CRUD operations and provides additional endpoints for data analysis."
authors = ["Hikmat Samadov <s3m3dov@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
