[tool.poetry]
name = "flask-employee-api"
version = "0.1.0"
description = "A Flask API that serves data from a database containing information about employees of a fictional company. The API allows for basic CRUD operations and provides additional endpoints for data analysis."
authors = ["Hikmat Samadov <s3m3dov@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = { extras = ["dotenv"], version = "^2.3.1" }
SQLAlchemy = "^2.0.12"
Flask-SQLAlchemy = "^3.0.3"
Flask-Migrate = "^4.0.4"
flask-smorest = "^0.41.0"
marshmallow-sqlalchemy = "^0.29.0"
SQLAlchemy-Utils = "^0.41.1"
colorlog = "^6.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
